# Anvil

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_shaders.bat  imgui.ini  project.txt
Apps/Basic/: CMakeLists.txt  main.cpp
Apps/Lines/: CMakeLists.txt  main.cpp
Apps/ShaderEditor/: CMakeLists.txt  main.cpp
Apps/ShaderEditor/shaders/: basic_color.fs  circle.fs  functions.fs  passthrough.vs
Engine/: CMakeLists.txt
Engine/src/: Application.cpp  Camera.cpp  gl3w.c
Engine/src/Gadgets/: Line.cpp
Engine/src/Geometry/: Box.cpp  Geometry.cpp  Grid.cpp  Mesh.cpp  Plane.cpp  Sphere.cpp
Engine/src/Render/: Renderer.cpp  Shader.cpp  Texture.cpp
Engine/src/UI/: Log.cpp  UIManager.cpp
Engine/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
cmake/: FindGLFW3.cmake  FindGLM.cmake
includes/Anvil/: Application.h  Box.h  Camera.h  Geometry.h  Grid.h  InputHandler.h  Log.h  Maze.h  Mesh.h  Renderer.h  Shader.h  Sphere.h  Texture.h  Types.h  UIManager.h  Window.h
includes/Engine/: Application.h  Box.h  Camera.h  Gadgets.h  Geometry.h  InputHandler.h  Line.h  Log.h  Mesh.h  Plane.h  Renderer.h  Shader.h  ShaderPresets.h  Sphere.h  Texture.h  Types.h  UIManager.h
includes/GL/: gl3w.h
includes/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
shaders/: blinn_phong.fs  blinn_phong.vs  cell_shaded.fs  cell_shaded.vs  default_shadows.fs  depth.fs  screenspace_lines.vs  visualize_normals.gs
src/: Application.cpp  Box.cpp  Geometry.cpp  Helpers.cpp  Log.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  UIManager.cpp  Window.cpp  main.cpp
src/Geometry/: Box.cpp  Geometry.cpp  Grid.cpp  Mesh.cpp  Plane.cpp  Sphere.cpp
src/Render/: Renderer.cpp  Shader.cpp  Texture.cpp
src/UI/: Log.cpp  UIManager.cpp
src/shaders/: basicFS.glsl  basicLighting_FS.glsl  basicLighting_VS.glsl  basicVS.glsl  default_shadows.vs  depth.gs  text_FS.glsl  textureFS.glsl  visualizeNormals_VS.glsl
